# iq_forge

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: CMakeLists.txt  main.cpp
src/core/: ring_buffer.h  sample_source.h  sample_types.h  tee_sample_source.h
src/devices/: device_manager.cpp  device_manager.h  device_scanner.cpp  device_scanner.h  hackrf_device.cpp  hackrf_device.h  hackrf_init_guard.h  i_device.h  pluto_device.cpp  pluto_device.h
src/dsp/: fft_processor.cpp  fft_processor.h  iq_file.cpp  iq_file.h  signal_generator.cpp  signal_generator.h
src/gui/: app.cpp  app.h  app_state.cpp  app_state.h  duration_input.cpp  duration_input.h  file_browser.cpp  file_browser.h  freq_input.cpp  freq_input.h  input_commit.h  log_panel.cpp  log_panel.h  panel_device.cpp  panel_device.h  panel_rx.cpp  panel_rx.h  panel_tx.cpp  panel_tx.h  panel_visualization.cpp  panel_visualization.h  plot_instfreq.cpp  plot_instfreq.h  plot_line_view.h  plot_phase.cpp  plot_phase.h  plot_spectrum.cpp  plot_spectrum.h  plot_time_domain.cpp  plot_time_domain.h  plot_trigger.h  plot_waterfall.cpp  plot_waterfall.h  plot_zoom_controls.h  waterfall_row.h
tests/: CMakeLists.txt  test_fft_processor.cpp  test_framework.h  test_iq_file.cpp  test_main.cpp  test_ring_buffer.cpp  test_signal_generator.cpp
